<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.addstory.AddStoryActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="260dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_add"
        android:contentDescription="@string/background_add" />

    <ImageView
        android:id="@+id/imageNewPost"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/new_post_image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_placeholder_view_vector" />

    <Button
        android:id="@+id/galleryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/blue_soft"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/gallery"
        android:textAllCaps="false"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/imageNewPost"
        app:strokeColor="@color/grey_soft"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/cameraXButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/camera"
        android:textAllCaps="false"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageNewPost"
        app:strokeColor="@color/grey_soft"
        app:strokeWidth="2dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <EditText
        android:id="@+id/descriptionNew"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/text_input"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/please_enter_your_description"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:lines="8"
        android:maxLines="8"
        android:padding="12dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxGPS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="335dp"
        android:layout_marginBottom="8dp"
        android:text="@string/description"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/descriptionNew"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxGPS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="4dp"
        android:text="@string/add_your_current_location_to_the_post"
        app:layout_constraintBottom_toTopOf="@+id/uploadButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_background"
        android:enabled="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/upload"
        android:textAllCaps="false"
        android:textColor="?attr/colorOnPrimary"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/loadingList"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/loading_background"
        android:elevation="5dp"
        android:padding="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>