<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_background_logo"
        android:contentDescription="@string/backgroundlogo" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="125dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/applogo"
        android:src="@drawable/ic_app_logo"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.25" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="175dp"
        android:background="@drawable/login_register_background"
        android:elevation="15dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TextView
            android:id="@+id/welcomeMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/welcome_login"
            android:textColor="@color/blue_normal"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/welcomeHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            android:ems="20"
            android:text="@string/please_use_your_own_account_to_enter"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeMessage"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/languageLogin"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/language_button_login"
            app:tint="@color/blue_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_language_24" />

        <TextView
            android:id="@+id/emailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:layout_weight="0"
            android:alpha="0"
            android:text="@string/email_address"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeHint"
            app:layout_constraintVertical_bias="0.0" />


        <id.smaraputra.storyapp.view.custom.EmailEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="30dp"
            android:alpha="0"
            android:background="@drawable/text_input"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="12dp"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailTitle" />

        <TextView
            android:id="@+id/passwordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0"
            android:alpha="0"
            android:text="@string/password"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText"
            app:layout_constraintVertical_bias="0.0" />

        <id.smaraputra.storyapp.view.custom.PasswordEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="30dp"
            android:alpha="0"
            android:background="@drawable/text_input"
            android:drawableStart="@drawable/ic_baseline_vpn_key_24"
            android:drawablePadding="12dp"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordTitle" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="4dp"
            android:alpha="0"
            android:background="@drawable/button_background"
            android:enabled="false"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="?attr/colorOnPrimary"
            app:cornerRadius="5dp"
            app:layout_constraintBottom_toTopOf="@+id/registerButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/registerButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="16dp"
            android:alpha="0"
            android:backgroundTint="@color/blue_normal"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/don_t_have_an_account_sign_up"
            android:textAllCaps="false"
            android:textColor="@color/blue_normal"
            app:cornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/loadingList"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/loading_background"
            android:elevation="5dp"
            android:padding="10dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>